--- a/docs/interni/verbali/2023_09_18_I/2023_09_18_I.tex
+++ b/docs/interni/verbali/2023_09_18_I/2023_09_18_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 11/09/2023}
 \setredattori{Alberti Nicolas}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 18/09/2023
