Sistemazione documenti completi

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -32,6 +32,8 @@ Questo documento si occupa di riportare un'analisi di tutti gli elementi richies
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione per candidatura RTB}
 \addversione{1.0.1}{09/08/2023}{Brotto Romina}{Cavaliere Erica}{Aggiornamento con requisiti di Qualità e requisiti di Vincolo}
 \addversione{1.0.2}{19/09/2023}{Soldà Matteo}{Ceccato Francesco}{Aggiornamento UC e requisiti in accordo con ultimi incontri effettuati con Imola Informatica}
+\addversione{1.1.0}{25/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per PB}
+\addversione{2.0.0}{25/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura PB}
 
 
 \def\pgfcalendarmonthitname#1{%
