--- a/docs/esterni/manuale_amministratore/manuale_amministratore.tex
+++ b/docs/esterni/manuale_amministratore/manuale_amministratore.tex
@@ -21,6 +21,8 @@ Questo documento descrive le funzionalità del programma a coloro che dovessero 
 \addversione{0.0.0}{05/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura scheletro}
 \addversione{0.0.1}{07/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura prima bozza contenuto}
 \addversione{0.0.2}{13/09/2023}{Soldà Matteo}{Cavaliere Erica}{Aggiunta delle immagini}
+\addversione{0.1.0}{25/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica per PB}
+\addversione{1.0.0}{25/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione per candidatura RTB}
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
