--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -29,6 +29,8 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.1.0}{24/07/2023}{Ceccato Francesco}{Brotto Romina}{Verifica documento per RTB}
 \addversione{1.0.0}{24/07/2023}{Soldà Matteo}{Ceccato Francesco}{Approvazione documento per RTB}
 \addversione{1.0.1}{31/08/2023}{Brotto Romina}{Soldà Matteo}{Aggiunta sezioni mancanti}
+\addversione{1.1.0}{25/09/2023}{Alberti Nicolas}{Soldà Matteo}{Verifica documento per PB}
+\addversione{2.0.0}{25/09/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione documento per PB}
 
 \begin{document}
 \makeindexdetails
